props files removed from Flex projects

--- a/Source/Revit.IFC.Common/Flex.Revit.IFC.Common.csproj
+++ b/Source/Revit.IFC.Common/Flex.Revit.IFC.Common.csproj
@@ -72,6 +72,9 @@
    <Compile Remove="Properties\AssemblyInfo.cs" />
  </ItemGroup>
  <ItemGroup>
+   <None Remove="Revit.IFC.Common.props" />
+ </ItemGroup>
+ <ItemGroup>
    <Folder Include="Properties\" />
  </ItemGroup>
  <ItemGroup>
