--- a/Source/Revit.IFC.Export/Flex.Revit.IFC.Export.csproj
+++ b/Source/Revit.IFC.Export/Flex.Revit.IFC.Export.csproj
@@ -49,7 +49,8 @@
   <PropertyGroup>
     <DefineConstants>$(DefineConstants);R$(RevitVersion)</DefineConstants>   
     <AssemblyName>Flex.Revit.IFC.Export</AssemblyName>   
-    <RootNamespace>Revit.IFC.Export</RootNamespace>
+    <RootNamespace>Revit.IFC.Export</RootNamespace>   
+    <FileVersion>5.0.0.0</FileVersion>
   </PropertyGroup>
   
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net47|x64'">
